--- a/style_p2.css
+++ b/style_p2.css
@@ -1,62 +1,236 @@
 @font-face {
-    font-family: 'ralewayregular';
-    src: url('font/raleway-regular-webfont.woff2') format('woff2'),
-         url('font/raleway-regular-webfont.woff') format('woff');
+    font-family: 'ralewayblack';
+    src: url('font/raleway-black-webfont.woff2') format('woff2'),
+         url('font/raleway-black-webfont.woff') format('woff'),
+         url('font/raleway-black.ttf') format('ttf');
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'ralewaybold';
+    src: url('font/raleway-bold-webfont.woff2') format('woff2'),
+         url('font/raleway-bold-webfont.woff') format('woff'),
+         url('font/raleway-bold.ttf') format('ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'ralewayextrabold';
+    src: url('font/raleway-extrabold-webfont.woff2') format('woff2'),
+         url('font/raleway-extrabold-webfont.woff') format('woff'),
+         url('font/raleway-extrabold.ttf') format('ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'ralewayregular';
+    src: url('font/raleway-regular-webfont.woff2') format('woff2'),
+         url('font/raleway-regular-webfont.woff') format('woff'),
+         url('font/raleway-regular.ttf') format('ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'ralewaysemibold';
+    src: url('font/raleway-semibold-webfont.woff2') format('woff2'),
+         url('font/raleway-semibold-webfont.woff') format('woff'),
+         url('font/raleway-semibold.ttf') format('ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body
 {
 	font-family: ralewayregular, Arial, sans-serif;
+	padding-left: 10px;
+	padding-right: 10px;
 }
-
 a
 {
 	text-decoration: none;
 	color: #0065FC;
 }
+h1,h2,h3
+{
+	font-family: ralewayblack;
+}
 
 #bloc_header
 {
 	display: flex;
-	border: 1px red solid;
 	width: auto;
 	justify-content: space-between;
-	padding-right: 10px;
-	padding-left: 10px;
 }
 nav ul
 {
 	display: flex;
 	list-style-type: none;
 	margin-top: 0;
-	border:1px red solid;
-
 }
 nav li
 {
 	padding-left: 50px;
 	padding-right: 15px;
 }
-li:nth-child(2)
+li:nth-child(2) a
 {
   color: black;
-  border: 1px blue solid;
 }
 li:last-child
 {
   font-weight: bold;
 }
 
+/*section RECHERCHE*/
+#rechercher
+{
+	display: flex;
+	height: 40px;
+	width: 450px;
+	position: relative;
+}
+#iconelocalisation
+{
+	background-color: #F2F2F2;
+	width: 50px;
+	height: auto;
+	text-align: center;
+	padding-top: 10px;
+	border-radius: 10px 0px 0px 10px;
+}
+.saisirecherche
+{
+	height: 40px;
+	width: 250px;
+	position: absolute;
+	left:50px;
+	font-weight: bold;
+	font-size: 1.2em;
+	font-family: ralewayblack;
+	border:none;
+}
+.boutonrechercher
+{
+	height: 100%;
+	width: 150px;
+	position: absolute;
+	right: 0px;
+	background-color: #0065FC;
+	color: white;
+	border-radius: 0px 10px 10px 0px;
+	border:none;
+	font-size: 1.2em;
+}
+/*partie filtre dans section RECHERCHE*/
+#bloc_filtre
+{
+	display: flex;
+	align-items: center;
+	font-family: ralewaybold;
+	width: 900px;
+	height: 2em;
+	position: relative;
+	justify-content: space-between;
+}
 
+.arrondiOuvre
+{
+	width: 2em;
+  	height: 2em;
+  	border: 1px solid #F2F2F2;
+  	border-bottom-left-radius: 50%;
+   	border-top-left-radius: 50%;
+   	border-right: none;
+   	position: absolute;
+   	left: 0;
+}
+.arrondiferme
+{
+	width: 2em;
+  	height: 2em;
+  	border: 1px solid #F2F2F2;
+  	border-bottom-right-radius: 50%;
+   	border-top-right-radius: 50%;
+   	border-left: none;
+   	position: absolute;
+   	right: 0;
+}
+.titreIcone
+{
+	height: 2em;
+	text-transform: capitalize;
+	display: flex;
+	align-items: center;
+	padding-left: 10px;
+	border-top:1px solid #F2F2F2;
+	border-bottom: 1px solid #F2F2F2;
+}
+.titreIcone span
+{
+	text-transform: none;
+}
+.icone
+{
+	display: flex;
+	background-color: #DEEBFF;
+	color: #0065FC;
+	width:2em;
+	height: 2em;
+	border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+}
 
+#eco
+{
+	width: 140px;
+	display: flex;
+	align-items: center;
+	position: relative;
+}
+#famille
+{
+	width: 120px;
+	position: relative;
+	display: flex;
+	align-items: center;
+}
+#romantique
+{
+	width: 160px;
+	position: relative;
+	display: flex;
+	align-items: center;
+}
+#animaux
+{
+	width: 200px;
+	position: relative;
+	display: flex;
+	align-items: center;
+}
+#nbdispo
+{
+	display: flex;
+	align-items: center;
+}
 
-
-
-
-
-
-
+#nbdispo span
+{
+	padding-left: 10px;
+	font-size: 0.8em;
+}
+#iconeInfo
+{
+	display: flex;
+	color: #0065FC;
+	border: 1px solid #F2F2F2;
+	width:1.5em;
+	height: 1.5em;
+	border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+}
 
 
 
@@ -69,11 +243,7 @@ li:last-child
 	padding-right: 300px;
 	padding-left: 10px;
 }
-h3
-{
-	font-size: 0.8em;
-	font-weight: bold;
-}
+
 p a
 {	color: black;
 	font-size: 0.8em;
