--- a/style_p2.css
+++ b/style_p2.css
@@ -59,15 +59,12 @@ h1,h2,h3
 {
 	display: flex;
 	width: auto;
-	/*border: 1px black solid;*/
 }
-
-#bloc_btn
+#btn
 {
 	width: 100%;
 	display: flex;
 	justify-content: flex-end;
-	/*border: 1px red solid;*/
 }
 #btnInscrire
 {
@@ -79,7 +76,7 @@ nav ul
 	display: flex;
 	list-style-type: none;
 	margin-top: 0;
-	flex-wrap: wrap;
+	justify-content: flex-start;
 }
 nav li
 {
@@ -153,28 +150,6 @@ li:nth-child(2) a
 	width: 800px;
 	justify-content: space-around;
 }
-.arrondiOuvre
-{
-	width: 2em;
-  	height: 2em;
-  	border: 1px solid #F2F2F2;
-  	border-bottom-left-radius: 50%;
-   	border-top-left-radius: 50%;
-   	border-right: none;
-   	position: absolute;
-   	left: 0;
-}
-.arrondiferme
-{
-	width: 2em;
-  	height: 2em;
-  	border: 1px solid #F2F2F2;
-  	border-bottom-right-radius: 50%;
-   	border-top-right-radius: 50%;
-   	border-left: none;
-   	position: absolute;
-   	right: 0;
-}
 .titreIcone
 {
 	height: 2em;
@@ -182,8 +157,6 @@ li:nth-child(2) a
 	display: flex;
 	align-items: center;
 	padding-left: 10px;
-	border-top:1px solid #F2F2F2;
-	border-bottom: 1px solid #F2F2F2;
 }
 .titreIcone span
 {
@@ -200,46 +173,27 @@ li:nth-child(2) a
 	display: flex;
 	background-color: #DEEBFF;
 	color: #0065FC;
-	width:2em;
-	height: 2em;
+	width:40px;
+	height: 40px;
 	border-radius: 50%;
     align-items: center;
     justify-content: center;
 }
-#eco
+#eco, #famille, #romantique, #animaux
 {
-	width: 140px;
+	width: auto;
+	height: 40px;
+	padding-right: 15px;
 	display: flex;
 	align-items: center;
-	position: relative;
+	border-radius: 20px;
+	border:1px #F2F2F2 solid;
 }
-#famille
-{
-	width: 120px;
-	position: relative;
-	display: flex;
-	align-items: center;
-}
-#romantique
-{
-	width: 160px;
-	position: relative;
-	display: flex;
-	align-items: center;
-}
-#animaux
-{
-	width: 200px;
-	position: relative;
-	display: flex;
-	align-items: center;
- }
 #nbdispo
 {
 	display: flex;
 	align-items: center;
 }
-
 #nbdispo span
 {
 	padding-left: 10px;
@@ -290,12 +244,6 @@ p a
 	justify-content: space-between;
 	align-items: center;
 }
-
-#bloc_btn
-{
-	width: 100%;
-	order: 1;
-}
 #btn
 {
 	width: 100%;
@@ -304,14 +252,12 @@ p a
 nav li
 {
 	border-bottom: 2px solid #F2F2F2;
+	flex-basis: 50%;
 }
-
-nav li:nth-child(1)
+nav li:hover
 {
 	border-bottom: 2px solid #0065FC;
 }
-
-
 
 /*section RECHERCHE*/
 
@@ -333,13 +279,17 @@ nav li:nth-child(1)
 }
 #filtres
 {
-	justify-content: flex-start;
 	flex-wrap: wrap;
+	justify-content: flex-start;
+	align-content: space-between;	
 }
-#titre
+
+#eco, #famille, #romantique, #animaux
 {
-	padding-right: 15px;
+	margin-right: 30px;
+	margin-top: 15px;
 }
+
 
 
 
