--- a/style_p2.css
+++ b/style_p2.css
@@ -213,53 +213,8 @@ li:nth-child(2) a
 
 
 
-/*partie ACTIVITES A MARSEILLE*/
-#activity
-{
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	height: 500px;
-	justify-content: space-between;
-	align-content: space-between;
-}
 
-#port, #calanques
-{
-	position: relative;
-	width: 23%;
-	height: 500px;
-	border-radius: 10px 10px 10px 10px;
-	box-shadow: 0 0 15px red;
-}
-#fort, #iles, #garde, #longchamp
-{
-	position: relative;
-	width: 23%;
-	height: 230px;
-	border-radius: 10px 10px 10px 10px;
-	box-shadow: 0 0 15px red;
-}
-#port img, #fort img, #iles img, #calanques img, #garde img, #longchamp img
-{
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	object-position: center center;
-	border-radius: 10px 10px 10px 10px;
-}
-#port_desc, #fort_desc, #iles_desc, #calanques_desc, #garde_desc, #longchamp_desc
-{
-	position: absolute;
-	bottom: 0;
-	background-color: yellow;
-	width: 94.5%;
-	line-height: 40px;
-	padding-left: 20px;
-	font-family: ralewaybold;
-	border-radius: 0px 0px 10px 10px;
-	font-size: 0.9em;
-}
+
 
 #global_footer
 {
@@ -335,18 +290,15 @@ nav li:hover
 	margin-top: 15px;
 }
 
-/*section ACTIVITES*/
 
-#activity
-{
-	flex-wrap: nowrap;
-	height: 1600px;
-}
-#port, #fort, #iles, #calanques, #garde, #longchamp
-{
-	width: auto;
-	height: 240px;
-}
+
+
+
+
+
+
+
+
 
 
 
@@ -364,8 +316,8 @@ nav li:hover
 
 
 
-/*@media all and (min-width:481px) and (max-width:1000px) /*tablette*/
-/*{
+@media all and (min-width:481px) and (max-width:1000px) /*tablette*/
+{
 #bloc_page
 {
 	width: auto;
@@ -390,11 +342,11 @@ nav li
 nav li:hover
 {
 	border-bottom: 2px solid #0065FC;
-}*/
+}
 
 /*section RECHERCHE*/
 
-/*.boutonrechercher_mobile
+.boutonrechercher_mobile
 {
 	display: none;
 }
@@ -409,29 +361,26 @@ nav li:hover
 {
 	margin-right: 30px;
 	margin-top: 15px;
-}*/
+}
 
-/*section ACTIVITES*/
 
-/*#activites
-{
-	width: auto;
-}
-{
-	flex-wrap: nowrap;
-	height: 1600px;
-	border:1px yellow solid;
-}
-#port, #fort, #iles, #calanques, #garde, #longchamp
-{
-	width: auto;
-	height: 240px;
-}
+
+
+
+
+
+
+
+
+
+
+
+
 
 #global_footer
 {
 	flex-direction: column;
 	display: inline;
-}*/
+}
 
 }
