--- a/style_p2.css
+++ b/style_p2.css
@@ -212,22 +212,95 @@ li:nth-child(2) a
 {
 	display: flex;
 	justify-content: space-between;
+	/*height: 550px;*/
 }
 
 #bloc_hebergements
 {
 	flex:3.5;
 	margin-right: 30px;
+	display: flex;
+	height: 550px;
+	flex-direction: column;
+	justify-content: space-around;
 	border-radius: 15px 15px 15px 15px;
-	border:1px black solid;
+
+	background-color: green;
 }
+#bloc_titre_hebergements
+{
+	width: 100%;
+	height: 50px;
+	display: flex;
+	align-items: center;
+}
+#bloc_titre_hebergements h2
+{
+	margin-left: 30px;
+}
+#hotels_hebergements
+{
+	display: flex;
+	flex-wrap: wrap;
+	height: 400px;
+	justify-content: space-around;
+	align-items: flex-start;
+	align-content: space-between;
+}
+#htlm_cannebiere, #htlm_port, #htlm_mouettes, #htlm_mer, #htlm_panier,#htlm_amina
+{
+	display: flex;
+	flex-direction: column;
+	width: 25%;
+	height: 180px;
+	border-radius: 15px 15px 15px 15px;
+	background-color: white;
+	padding: 5px 5px 5px 5px;
+}
+
+.bloc_htl_info
+{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 40%;
+	margin: 10px 10px 10px 10px;
+}
+.htl_photo
+{
+	display: flex;
+	width: 100%;
+	height: 60%;
+	border-radius: 15px 15px 15px 15px;
+}
+.htl_photo img
+{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: center center;
+	border-radius: 15px 15px 15px 15px;
+}
+#voirplus
+{
+	height: 50px;
+	display: flex;
+	align-items: center;
+	color: black;
+	font-family: ralewaybold;
+	size: 0.9em;
+	margin-left: 30px;
+}
+
 #bloc_populaires
 {
 	flex:1.5;
 	height: 550px;
 	display: flex;
 	flex-direction: column;
+
 	background-color: yellow;
+
 	align-items: center;
 	justify-content: space-around;
 	border-radius: 15px 15px 15px 15px;
@@ -236,8 +309,17 @@ li:nth-child(2) a
 {
 	display: flex;
 	width: 100%;
+	height: 50px;
 	align-items: center;
 	justify-content: space-around;
+}
+#hotels_pop
+{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-content: space-between;
+	height: 460px;
 }
 #htlm_matin, #htlm_eau, #htlm_bleublanc
 {
@@ -248,7 +330,7 @@ li:nth-child(2) a
 	background-color: white;
 	padding: 5px 5px 5px 5px;
 }
-.bloc_htl_info
+.bloc_htl_info_pop
 {
 	display: flex;
 	flex:2;
@@ -256,7 +338,7 @@ li:nth-child(2) a
 	justify-content: space-between;
 	margin: 10px 10px 10px 30px;
 }
-.htl_photo
+.htl_photo_pop
 {
 	display: flex;
 	width: 100px;
@@ -264,7 +346,7 @@ li:nth-child(2) a
 	flex:1;
 	border-radius: 15px 15px 15px 15px;
 }
-.htl_photo img
+.htl_photo_pop img
 {
 	width: 100%;
 	height: 100%;
@@ -280,6 +362,7 @@ li:nth-child(2) a
 .htl_name
 {
 	font-family: ralewaybold;
+	font-size: 0.9em;
 }
 .htl_name a
 {
@@ -302,34 +385,6 @@ li:nth-child(2) a
 {
 	color: red;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /*partie ACTIVITES A MARSEILLE*/
 #activity
@@ -376,7 +431,6 @@ li:nth-child(2) a
 	border-radius: 0px 0px 15px 15px;
 	font-size: 0.9em;
 }
-
 #port_desc span, #fort_desc span, #iles_desc span, #calanques_desc span, #garde_desc span, #longchamp_desc span
 {
 	padding-left: 20px;
@@ -454,7 +508,6 @@ nav li:hover
 	color: white;
 	border: none;
 	border-radius: 15px 15px 15px 15px;
-	border:1px black solid;
 }
 #filtres
 {
