--- a/style_p2.css
+++ b/style_p2.css
@@ -318,7 +318,7 @@ li:nth-child(2) a
 #htlm_matin, #htlm_eau, #htlm_bleublanc
 {
 	display: flex;
-	width: 80%;
+	width: 90%;
 	height: 120px;
 	border-radius: 15px 15px 15px 15px;
 	background-color: white;
@@ -446,7 +446,7 @@ p a
 
 /*----------------------------MEDIA QUERIES--------------------------------*/
 
-@media all and (max-width:1024px) /*Mobile*/
+@media all and (max-width:767px) /*Mobile*/
 {
 #bloc_page
 {
@@ -487,12 +487,10 @@ nav li:hover
 }
 
 /*section RECHERCHE*/
-
 .boutonrechercher_web
 {
 	display: none;
 }
-
 .boutonrechercher_mobile
 {
 	display: block;
@@ -509,27 +507,86 @@ nav li:hover
 	justify-content: flex-start;
 	align-content: space-between;	
 }
-
 #eco, #famille, #romantique, #animaux
 {
 	margin-right: 30px;
 	margin-top: 15px;
 }
 
-/*section HEBERGEMENTS POPULAIRES*/
+/*section HEBERGEMENTS*/
 #section1
 {
 	flex-direction: column;
 }
 #bloc_hebergements
 {
-	flex:none;
 	order:1;
+	margin-top: 15px;
+	width: 100%;
+	height: 3500px;
+	background-color: white;
+}
+#hotels_hebergements
+{
+	flex-direction: column;
+	flex-wrap: nowrap;
+	height: 2000px;
+	justify-content: space-around;
+}
+#htlm_cannebiere, #htlm_port, #htlm_mouettes, #htlm_mer, #htlm_panier,#htlm_amina
+{
+	width: 100%;
+	height: 300px;
+	box-shadow: 0 0 15px #F2F2F2;
 }
 #bloc_populaires
 {
-	flex:none;
+	height: 1000px;
 }
+#hotels_pop
+{
+	align-content: space-around;
+}
+.htl_photo
+{
+	height: 80%;
+}
+
+.bloc_htl_info
+{
+	height: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*section ACTIVITES*/
 
@@ -544,14 +601,10 @@ nav li:hover
 	height: 240px;
 }
 
-
-
-
-
 #global_footer
 {
 	flex-direction: column;
-	display: inline;
+	width: auto;
 }
 
 
